--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,39 @@
 services:
   kafka:
     image: bitnami/kafka:latest
+    container_name: kafka
     environment:
-      - KAFKA_BROKER_ID=1
-      - KAFKA_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://0.0.0.0:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - ALLOW_PLAINTEXT_LISTENER=yes
     ports:
       - "9092:9092"
+      - "9094:9094"
     networks:
       - real-time-net
 
-  python:
-    image: python:3.9-slim
+
+  binance-stream:
+    build:
+      context: ./src/ingestion
+      dockerfile: ingestion.Dockerfile
+    container_name: binance-stream
+    depends_on:
+      - kafka
+    volumes:
+      - ./src/ingestion:/app
+    command: 
+      - ["sleep", "infinity"]
+      # - ["python", "-u", "./src/makeStream.py"]
+    networks:
+      - real-time-net
+
 
   spark-master:
       image: bitnami/spark:3.5.3
@@ -46,9 +67,6 @@ services:
       - ./src:/opt/workspace
     networks: [real-time-net]
 
-volumes:
-  src:
-    driver: local
 networks:
   real-time-net:
     driver: bridge
