feat: Volume counting to terminal

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       volumes:
         - ./src:/opt/workspace
       networks: [real-time-net]
+      workspace: /opt/workspace
 
   spark-worker:
     image: bitnami/spark:3.5.3
